--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shivakr07.github.io/Portfolio",
+  "homepage": "https://shivakr07.github.io/PortFolio1.0",
   "name": "testing",
   "version": "0.1.0",
   "private": true,
